# experiments

lsh/: lsh.py
permutation/: cyclic.py  dilate.py  local_attention.py  rotary.py  windowed_attention.py  windown_partition.py
permutation/attentions/: local_attn.py
test_GEMM/: CMakeLists.txt  main.cpp
